--- a/spring/springbootdemo/src/main/resources/application.properties
+++ b/spring/springbootdemo/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 
 #服务器覆盖默认端口
-#server.port=8090
+server.port=8085
 
 
 #当前web应用的名称 http://localhost:8090/demo/quick
@@ -22,9 +22,9 @@ mybatis.type-aliases-package=com.example.springbootdemo.dao
 # Redis数据库索引（默认为0）
 #spring.redis.database=0
 # Redis服务器地址
-#spring.redis.host=127.0.0.1
+spring.redis.host=127.0.0.1
 ## Redis服务器连接端口
-#spring.redis.port=6379
+spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 #spring.redis.password=zwqh
 # 链接超时时间 单位 ms（毫秒）
