--- a/spring/springbootdemo/src/main/resources/application.properties
+++ b/spring/springbootdemo/src/main/resources/application.properties
@@ -1,5 +1,15 @@
 #服务器覆盖默认端口
-server.port=8085
+server.port=8086
+#server.ssl.enabled = true
+#server.ssl.key-alias = spring
+#server.ssl.key-store = classpath:saml/keystore.jks
+#server.ssl.key-store-password = summer@123!
+
+#okta.oauth2.issuer=https://dev-17635463.okta.com
+#okta.oauth2.clientId=0oa10szgthtfIEuFd5d7
+#okta.oauth2.clientSecret=LbqMZ0QsDtGrLXvmUOI9Kf3ClWsU4iww2YwHivlP
+#
+#security.saml2.metadata-url = https://dev-17635463.okta.com/app/exk10gvz3q5RwOWcP5d7/sso/saml/metadata
 #当前web应用的名称 http://localhost:8090/demo/quick
 #server.servlet.context-path=/demo
 #数据库连接信息
@@ -23,8 +33,10 @@ spring.datasource.password=P@ss1234
 # Redis数据库索引（默认为0）
 #spring.redis.database=0
 # Redis服务器地址
-spring.redis.host=127.0.0.1
-## Redis服务器连接端口
+#spring.redis.host=127.0.0.1
+#虚拟机地址
+spring.redis.host=192.168.0.106
+### Redis服务器连接端口
 spring.redis.port=6379
 # Redis服务器连接密码（默认为空）
 #spring.redis.password=zwqh
