--- a/spring/springbootdemo/pom.xml
+++ b/spring/springbootdemo/pom.xml
@@ -66,15 +66,26 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-redis</artifactId>
-            <!--            <exclusions>-->
-            <!--                &lt;!&ndash; 排除lettuce包 &ndash;&gt;-->
-            <!--                <exclusion>-->
-            <!--                    <groupId>io.lettuce</groupId>-->
-            <!--                    <artifactId>lettuce-core</artifactId>-->
-            <!--                </exclusion>-->
-            <!--            </exclusions>-->
+<!--                        <exclusions>-->
+<!--                            &lt;!&ndash; 排除lettuce包 &ndash;&gt;-->
+<!--                            <exclusion>-->
+<!--                                <groupId>io.lettuce</groupId>-->
+<!--                                <artifactId>lettuce-core</artifactId>-->
+<!--                            </exclusion>-->
+<!--                        </exclusions>-->
         </dependency>
         <!-- redis依赖commons-pool 这个依赖一定要添加 -->
+
+        <!-- https://mvnrepository.com/artifact/redis.clients/jedis -->
+<!--        x,导入不了-->
+<!--        <dependency>-->
+<!--            <groupId>redis.clients</groupId>-->
+<!--            <artifactId>jedis</artifactId>-->
+<!--            <version>3.3.0</version>-->
+<!--        </dependency>-->
+
+
+
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-pool2</artifactId>
@@ -110,11 +121,61 @@
             <systemPath>${project.basedir}/src/main/resources/lib/javax.mail.jar</systemPath>
         </dependency>
 
+                <dependency>
+                    <groupId>redis.clients</groupId>
+                    <artifactId>jedis</artifactId>
+                    <scope>system</scope>
+                    <version>2.9.0</version>
+                    <systemPath>${project.basedir}/src/main/resources/lib/jedis-2.9.0.jar</systemPath>
+                </dependency>
+
         <dependency>
             <groupId>com.baomidou</groupId>
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.2.0</version>
         </dependency>
+
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+<!--        <dependency>-->
+<!--            <groupId>org.springframework.boot</groupId>-->
+<!--            <artifactId>spring-boot-starter-security</artifactId>-->
+<!--        </dependency>-->
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth.boot/spring-security-oauth2-autoconfigure -->
+        <dependency>
+            <groupId>org.springframework.security.oauth.boot</groupId>
+            <artifactId>spring-security-oauth2-autoconfigure</artifactId>
+            <version>2.1.3.RELEASE</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/spring-security-oauth2-autoconfigure-2.1.3.RELEASE.jar</systemPath>
+        </dependency>
+
+
+        <!-- https://mvnrepository.com/artifact/com.okta.spring/okta-spring-boot-starter -->
+        <dependency>
+            <groupId>com.okta.spring</groupId>
+            <artifactId>okta-spring-boot-starter</artifactId>
+            <version>2.0.0</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/okta-spring-boot-starter-2.0.0.jar</systemPath>
+        </dependency>
+
+
+
+        <!-- https://mvnrepository.com/artifact/org.springframework.security.oauth/spring-security-oauth2 -->
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>2.3.5.RELEASE</version>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/resources/lib/spring-security-oauth2-2.3.5.RELEASE.jar</systemPath>
+        </dependency>
+
+
 
         <!--mybatis plus extension,包含了mybatis plus core-->
 <!--        <dependency>-->
