--- a/spring/springbootdemo/src/main/resources/application.yaml
+++ b/spring/springbootdemo/src/main/resources/application.yaml
@@ -60,3 +60,15 @@ mybatis-plus:
     cache-enabled: false
     # 这个配置会将执行的sql打印出来，在开发或测试的时候可以用
     log-impl: org.apache.ibatis.logging.stdout.StdOutImpl
+
+
+#imap进项读取文件
+ImapConfig:
+  protocol: imap
+  host: imap.exmail.qq.com
+  port: 993
+  enableSsl: true
+  userName: jack@danggui.fun
+  pwd: P@ss1234!
+  emailTile: 电子发票
+
